Code to pull actual names

--- a/Disrupt JMM.ipynb
+++ b/Disrupt JMM.ipynb
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
    "metadata": {
     "id": "TF2flAGewp1S"
    },
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -210,7 +210,7 @@
        " 'sourcetweet_author_id': 'NA'}"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -228,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -237,13 +237,53 @@
        "1129"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "len(tweets)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "I want to generate a lilst of users along with their names."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dr. Adriana Salerno Domínguez 🇻🇪\n"
+     ]
+    }
+   ],
+   "source": [
+    "users={}\n",
+    "for tweet in tweets:\n",
+    "    users[tweet['user_username']]=tweet['user_name']\n",
+    "    \n",
+    "print(users['mathyadriana'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(\"user_names.csv\", 'w') as csvfile:\n",
+    "    writer = csv.writer(csvfile)\n",
+    "    for user in users:\n",
+    "        writer.writerow([user,users[user]])"
    ]
   },
   {
